--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 <div class="container">
     <div class="content">
         <h1>Ice Cream Shop</h1>
+        <form>
+            <div class="row">
+                <div>
+                    <label for="firstname">First</label>
+                    <input id="firstname" name="first_name" type="text">
+                </div>
+                <div>
+                    <label for="lastname">Last</label>
+                    <input id="lastname" name="last_name" type="text">
+                </div>
+
+            </div>
+        </form>
     </div>
 </div>
 </body>
