--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="content">
         <h1>Ice Cream Shop</h1>
         <form>
+            <fieldset>
+                <legend>Customer:</legend>
             <div class="row">
                 <div>
                     <label for="firstname">First</label>
@@ -19,8 +21,72 @@
                     <label for="lastname">Last</label>
                     <input id="lastname" name="last_name" type="text">
                 </div>
-
             </div>
+            </fieldset>
+            <div class="row">
+            <fieldset>
+                    <legend>Flavor:</legend>
+                <div>
+                    <input type="radio" id="vanilla" name="icecream">
+                    <label for="vanilla">Vanilla</label>
+                </div>
+                <div>
+                    <input type="radio" id="straberry" name="icecream">
+                    <label for="straberry">Strawberry</label>
+                </div>
+                <div>
+                    <input type="radio" id="chocolate" name="icecream">
+                    <label for="chocolate">Chocolate</label>
+                </div>
+            </fieldset>
+                <fieldset>
+                    <legend>Size:</legend>
+                <div>
+                    <input type="radio" id="small" name="size">
+                    <label for="small">Small</label>
+                </div>
+                <div>
+                    <input type="radio" id="medium" name="size">
+                    <label for="medium">Medium</label>
+                </div>
+                <div>
+                    <input type="radio" id="large" name="size">
+                    <label for="large">Large</label>
+                </div>
+                </fieldset>
+                <fieldset>
+                    <legend>Toppings:</legend>
+                <div>
+                    <input type="checkbox" id="sprinkles" name="sprinkles" value="sprinkles">
+                    <label for="sprinkles">Sprinkles</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="whippedCream" name="whippedCream" value="whippedCream">
+                    <label for="whippedCream">Whipped Cream</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="caramel" name="caramel" value="caramel">
+                    <label for="caramel">Caramel</label>
+                </div>
+                </fieldset>
+            </div>
+                <fieldset>
+                    <legend>Cup or Cone:</legend>
+                <label for="container">Please Choose One</label>
+                <select name="container" id="container">
+                    <option value="cup">Plastic Cup</option>
+                    <option value="sugar">Sugar Cone</option>
+                    <option value="waffle">Waffle Cone</option>
+                    <option value="chocolateCone">Chocolate Dipped Waffle Cone</option>
+                </select>
+                </fieldset>
+                <fieldset>
+                    <legend>Special: </legend>
+                <label for="SpecialRequests">Special Requests:</label>
+                <textarea id="SpecialRequests" name="SpecialRequests" rows="4" cols="10" placeholder="Allergic to peanuts, substitutions, etc."></textarea>
+                </fieldset>
+            <button type="button" onclick="alert('Free Today for our Grand Opening!')">Calculate Cost</button>
+            <button type="submit">Submit Order</button>
         </form>
     </div>
 </div>
